--- a/add-widwhrty/package.json
+++ b/add-widwhrty/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "exsaaspoc",
+    "name": "sapsaaspoc",
     "version": "0.1.0",
     "description": "cds extension project",
     "dependencies": {}
