--- a/saasext-add/package.json
+++ b/saasext-add/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sapsaaspoc",
+    "name": "pbsaaspoc1",
     "version": "0.1.0",
     "description": "cds extension project",
     "dependencies": {}
